[gd_scene load_steps=9 format=2]

[ext_resource path="res://scene/Policy/Slot.tscn" type="PackedScene" id=1]
[ext_resource path="res://images/styleboxflat/neutral_round.tres" type="StyleBox" id=2]
[ext_resource path="res://script/Policy/MainPanel.gd" type="Script" id=3]
[ext_resource path="res://images/styleboxflat/normal.tres" type="StyleBox" id=4]
[ext_resource path="res://images/styleboxflat/blue.tres" type="StyleBox" id=5]
[ext_resource path="res://images/other/bar_2.png" type="Texture" id=6]
[ext_resource path="res://scene/Policy/NextRound.gd" type="Script" id=7]
[ext_resource path="res://fonts/MFManYu_Noncommercial-Regular.tres" type="DynamicFont" id=8]

[node name="PolicyTree" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 534.721 ]
}

[node name="BaseContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree" type="VBoxContainer" parent="BaseContainer"]
margin_right = 506.0
margin_bottom = 608.0
size_flags_horizontal = 3

[node name="TreePanel" type="CenterContainer" parent="BaseContainer/Tree"]
margin_right = 506.0
margin_bottom = 454.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridPanel" type="GridContainer" parent="BaseContainer/Tree/TreePanel"]
margin_left = 253.0
margin_top = 227.0
margin_right = 253.0
margin_bottom = 227.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 3

[node name="GlobalInfoPanel" type="VBoxContainer" parent="BaseContainer/Tree"]
margin_top = 458.0
margin_right = 506.0
margin_bottom = 608.0

[node name="PropelPanel" type="HBoxContainer" parent="BaseContainer/Tree/GlobalInfoPanel"]
margin_right = 506.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="PropelSlot" parent="BaseContainer/Tree/GlobalInfoPanel/PropelPanel" instance=ExtResource( 1 )]
margin_top = 15.0
margin_bottom = 135.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="PropelTitle" type="Label" parent="BaseContainer/Tree/GlobalInfoPanel/PropelPanel"]
margin_left = 162.0
margin_top = 66.0
margin_right = 162.0
margin_bottom = 83.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 8 )
align = 1
valign = 1

[node name="PolicyProgress" type="TextureProgress" parent="BaseContainer/Tree/GlobalInfoPanel/PropelPanel"]
margin_left = 205.0
margin_top = 38.0
margin_right = 506.0
margin_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 6
rounded = true
texture_progress = ExtResource( 6 )
nine_patch_stretch = true
stretch_margin_left = 169
stretch_margin_right = 132
stretch_margin_bottom = 73

[node name="VSeparator" type="VSeparator" parent="BaseContainer"]
margin_left = 510.0
margin_right = 514.0
margin_bottom = 608.0

[node name="PolicyInfo" type="VBoxContainer" parent="BaseContainer"]
margin_left = 518.0
margin_right = 1024.0
margin_bottom = 608.0
size_flags_horizontal = 3

[node name="Description" type="Panel" parent="BaseContainer/PolicyInfo"]
margin_right = 506.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
custom_styles/panel = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="BaseContainer/PolicyInfo/Description"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="BaseContainer/PolicyInfo/Description/VBoxContainer"]
margin_right = 506.0
margin_bottom = 17.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="BaseContainer/PolicyInfo/Description/VBoxContainer/HBoxContainer"]
margin_left = 253.0
margin_right = 253.0
margin_bottom = 17.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 8 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="BaseContainer/PolicyInfo/Description/VBoxContainer"]
margin_top = 21.0
margin_right = 506.0
margin_bottom = 200.0
size_flags_vertical = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="BaseContainer/PolicyInfo/Description/VBoxContainer/HBoxContainer2"]
margin_left = 253.0
margin_top = 81.0
margin_right = 253.0
margin_bottom = 98.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 8 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="Panel" parent="BaseContainer/PolicyInfo"]
margin_top = 204.0
margin_right = 506.0
margin_bottom = 404.0
rect_min_size = Vector2( 0, 200 )
custom_styles/panel = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="BaseContainer/PolicyInfo/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PolicyProgress" type="TextureProgress" parent="BaseContainer/PolicyInfo/ProgressBar/HBoxContainer"]
margin_top = 63.0
margin_right = 301.0
margin_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 6
rounded = true
texture_progress = ExtResource( 6 )
nine_patch_stretch = true
stretch_margin_left = 169
stretch_margin_right = 132
stretch_margin_bottom = 73

[node name="Begin" type="Button" parent="BaseContainer/PolicyInfo/ProgressBar/HBoxContainer"]
visible = false
margin_left = 370.0
margin_top = 65.0
margin_right = 440.0
margin_bottom = 135.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "begin"
expand_icon = true

[node name="Use" type="Button" parent="BaseContainer/PolicyInfo/ProgressBar/HBoxContainer"]
visible = false
margin_left = 421.0
margin_top = 65.0
margin_right = 491.0
margin_bottom = 135.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "use"
expand_icon = true

[node name="Bonus" type="Panel" parent="BaseContainer/PolicyInfo"]
margin_top = 408.0
margin_right = 506.0
margin_bottom = 608.0
rect_min_size = Vector2( 0, 200 )
custom_styles/panel = ExtResource( 4 )

[node name="VBoxContainer2" type="VBoxContainer" parent="BaseContainer/PolicyInfo/Bonus"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextRound" type="Button" parent="."]
anchor_left = 0.89
anchor_top = 0.887
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.00177002
margin_top = 0.175415
margin_right = -0.638184
margin_bottom = 0.375427
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "end"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="BaseContainer/PolicyInfo/ProgressBar/HBoxContainer/Begin" to="." method="_on_Begin_button_up"]
[connection signal="button_up" from="BaseContainer/PolicyInfo/ProgressBar/HBoxContainer/Use" to="." method="_on_Use_button_up"]
[connection signal="pressed" from="NextRound" to="NextRound" method="_on_NextRound_pressed"]
